# circt

./: README.md
include/circt/: InitAllDialects.h  InitAllPasses.h
include/circt/Analysis/: DependenceAnalysis.h  SchedulingAnalysis.h
include/circt/Conversion/: .Passes.td.swp  .Passes_BASE_156834.td.swp  .Passes_LOCAL_156834.td.swp  .Passes_REMOTE_156834.td.swp  AffineToSTG.h  Passes.h  Passes.td  Passes_BACKUP_156834.td  Passes_LOCAL_156834.td  SCFToSTG.h  STGToCalyx.h
include/circt/Dialect/: CMakeLists.txt
include/circt/Scheduling/: Algorithms.h  Problems.h
include/circt/Transforms/: Passes.h  Passes.td
lib/Analysis/: CMakeLists.txt  DependenceAnalysis.cpp  SchedulingAnalysis.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/AffineToLoopSchedule/: AffineToLoopSchedule.cpp  CMakeLists.txt
lib/Conversion/AffineToPipeline/: AffineToPipeline.cpp
lib/Conversion/AffineToSTG/: AffineToSTG.cpp  CMakeLists.txt
lib/Conversion/CalyxToHW/: CalyxToHW.cpp
lib/Conversion/LoopScheduleToCalyx/: LoopScheduleToCalyx.cpp
lib/Conversion/SCFToSTG/: CMakeLists.txt  (+1 more)
lib/Dialect/: CMakeLists.txt
lib/Dialect/HLS/: CMakeLists.txt  HLSDialect.cpp
lib/Dialect/HLS/Transforms/: CMakeLists.txt  PassDetails.h  UnrollMarkedLoops.cpp
lib/Scheduling/: CMakeLists.txt  ListScheduler.cpp  Problems.cpp  SimplexSchedulers.cpp
lib/Transforms/: CMakeLists.txt  HoistInterIterationArg.cpp  PassDetail.h  PipelineForLoopSchedule.cpp  UnrollForLoopSchedule.cpp
test/circt-opt/: commandline.mlir
tools/circt-opt/: CMakeLists.txt
tools/circt-reduce/: CMakeLists.txt
(+43 files in other folders)
